solucionando metricas de calidad